fixes flex sapcing and adds gap to cards and columns, edits max-widths of columns and service cards, updaes section padding block and adds more padding bottom to footer

--- a/static/css/barebones.css
+++ b/static/css/barebones.css
@@ -413,7 +413,7 @@ p,
 ul,
 ol,
 form {
-  margin-bottom: 1.5rem; }
+  margin-bottom: 0; }
 
 
 /* Utilities
